--- a/src/1-PresentationLayer/CommonWpf.Client/appsettings.Development.json
+++ b/src/1-PresentationLayer/CommonWpf.Client/appsettings.Development.json
@@ -1,3 +1,39 @@
 {
-
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "WriteTo:Async": {
+      "Name": "Async",
+      "Args": {
+        "configure": [
+          {
+            "Name": "Console"
+          },
+          {
+            "Name": "File",
+            "Args": {
+              "path": "D:/CommonWpfLogs/log.txt",
+              "rollingInterval": "Day",
+              "fileSizeLimitBytes": 10485760,
+              "retainedFileCountLimit": 100,
+              "rollOnFileSizeLimit": true,
+              "shared": true,
+              "flushToDiskInterval": "00:00:01"
+            }
+          }
+        ]
+      }
+    }
+  },
+  "ConnectionString": {
+    "Sqlite": "sqlite",
+    "Mysql": "mysql"
+  }
 }
